prevent start button shift on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,8 @@ header {
     width: 100%;
     padding: 0 6vw;
     padding-bottom: 20px;
+    position: absolute;
+    left: 0;
   }
 
   .start-camera svg {
